--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "blog",
+  "name": "transliteration",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^1.3.0",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "msal": "^0.2.4",
     "react": "^16.8.4",
+    "react-adal": "^0.4.22",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
